adds ability to see proverbs from db.

--- a/PFDL/main_app/templates/index.html
+++ b/PFDL/main_app/templates/index.html
@@ -1,16 +1,19 @@
+{% load staticfiles %}
+<!--add bootstrap3  -->
 <!DOCTYPE html>
 <html>
   <head>
 	<title>Proverbs for Daily Living</title>
+  <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}" />
   </head>
   <body>
     <h1>Proverbs for Daily Living</h1>
     {% for proverb in proverbs %}
-  <p>Date: {{ proverb.date }}</p>
-  <p>Proverb: {{ proverb.proverb}}</p>
+    <p>date: {{ proverb.date }}</p>
+    <p>proverb: {{proverb.proverb}}</p>
   <hr />
 {% endfor %}
     <hr />
-    <footer>All Rights Reserved, Chanten 2018</footer>
+    <footer>Man hold up, Chanten 2018</footer>
   </body>
  </html>
