--- a/PFDL/main_app/templates/index.html
+++ b/PFDL/main_app/templates/index.html
@@ -1,18 +1,27 @@
 {% load staticfiles %}
 <!--add bootstrap3  -->
 <!DOCTYPE html>
+
 <html>
   <head>
 	<title>Proverbs for Daily Living</title>
   <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}" />
   </head>
   <body>
+
+
     <h1>Proverbs for Daily Living</h1>
+    <img src=".static/content/images/IMG_2402.png" alt="Proverber"/>
+
+    <br/><br/><br/><br/><br/>
+
     {% for proverb in proverbs %}
-    <p>date: {{ proverb.date }}</p>
-    <p>proverb: {{proverb.proverb}}</p>
+    <!-- Show date and proverb for date -->
+    <p class="date">{{ proverb.date }}</p>
+    <p>{{proverb.proverb}}</p>
   <hr />
 {% endfor %}
+
     <hr />
     <footer>Man hold up, Chanten 2018</footer>
   </body>
