--- a/PFDL/main_app/templates/profile.html
+++ b/PFDL/main_app/templates/profile.html
@@ -5,7 +5,7 @@
     <title>PFDL User Profile</title>
   </head>
   <body>
-    <p> How do I get the user account that's all snazzy in django to show up here?</p>
+    <p> How do I get the user account that's all snazzy in django to show up here?</p>r
 
   </body>
 </html>
